--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,9 @@
         "webpatser/laravel-countries": "dev-master",
         "mpociot/laravel-apidoc-generator": "^1.6",
         "simplesoftwareio/simple-qrcode": "~1",
-        "laravel/cashier-braintree": "~1.0"
+        "laravel/cashier-braintree": "~1.0",
+        "doctrine/dbal" : "2.5",
+        "tymon/jwt-auth": "0.5.*"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
