--- a/bower.json
+++ b/bower.json
@@ -16,6 +16,7 @@
     "restangular": "^1.5.2",
     "satellizer": "^0.15.5",
     "ng-cookies": "~1.1.1",
-    "angular-cookies": "~1.5.8"
+    "angular-cookies": "~1.5.8",
+    "angular-gettext": "~2.3.8"
   }
 }
