--- a/composer.json
+++ b/composer.json
@@ -10,11 +10,12 @@
         "webpatser/laravel-countries": "dev-master",
         "mpociot/laravel-apidoc-generator": "^1.6",
         "simplesoftwareio/simple-qrcode": "~1",
-        "laravel/cashier-braintree": "~1.0",
         "doctrine/dbal" : "2.5",
         "tymon/jwt-auth": "0.5.*",
         "h4cc/wkhtmltopdf-amd64": "0.12.x",
-        "barryvdh/laravel-snappy": "^0.3.0"
+      "barryvdh/laravel-snappy": "^0.3.0",
+      "oureastudios/laravel5-braintree": "dev-master",
+      "paypal/rest-api-sdk-php": "1.10.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
