--- a/bower.json
+++ b/bower.json
@@ -17,6 +17,7 @@
     "satellizer": "^0.15.5",
     "ng-cookies": "~1.1.1",
     "angular-cookies": "~1.5.8",
-    "angular-gettext": "~2.3.8"
+    "angular-gettext": "~2.3.8",
+    "ng-admin": "~0.9.1"
   }
 }
