ajout de aws sqs

--- a/.env.example
+++ b/.env.example
@@ -12,7 +12,12 @@ DB_PASSWORD=secret
 
 CACHE_DRIVER=file
 SESSION_DRIVER=file
-QUEUE_DRIVER=sync
+
+AWS_ACCESS_KEY_ID= AKIAJBHFLGQIJGFCUBLQ
+AWS_SECRET_ACCESS_KEY=SGnhxzP2Kx8upFKGXfAUW4R4r18OEFNvvsHuh+GJ
+QUEUE_URL=https://sqs.us-east-1.amazonaws.com/412989421113
+QUEUE_NAME=eventmboa
+QUEUE_DRIVER=sqs
 
 REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
