--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,8 @@ Homestead.json
 /public/vendor
 .env
 /.idea
+
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
