ajout du config eb des taches cron

--- a/.ebextensions/00environmentVariables.config
+++ b/.ebextensions/00environmentVariables.config
@@ -10,28 +10,32 @@ option_settings:
      value : "root"
    - option_name : DB_PASSWORD
      value : "eventmboa"
-   - option_name : LARAVEL_ENCRYPTION_KEY
+   - option_name : APP_KEY
      value : base64:eRO7DvTYAkrsbLRlC99EcRUcd3BlMNvy9BcY/DrKJ5s=
    - option_name : APP_URL
      value : http://www.eventmboa.com/
    - option_name : APP_ENV
      value : production
    - option_name : AWS_ACCESS_KEY_ID
-     value : AKIAJBHFLGQIJGFCUBLQ
+     value : AKIAIIPHRFQ56S4PJ2IA
    - option_name : AWS_SECRET_ACCESS_KEY
-     value : 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
+     value : RLD9ctbsoPrJUeio9RjduFB+eYRIuLGoNwvKCo+W
    - option_name : QUEUE_URL
      value : https://sqs.us-east-1.amazonaws.com/412989421113
    - option_name : QUEUE_NAME
      value : eventmboa
    - option_name : QUEUE_DRIVER
      value : sqs
+   - option_name : SUPERVISE
+     value : enable
    - option_name : MAIL_DRIVER
      value : smtp
    - option_name : MAIL_HOST
      value : smtp.gmail.com
    - option_name : MAIL_PORT
      value : 587
+   - option_name : MAIL_ENCRYPTION
+     value : tls
    - option_name : MAIL_USERNAME
      value : eventmboa@gmail.com
    - option_name : MAIL_PASSWORD
