--- a/.gitignore
+++ b/.gitignore
@@ -7,8 +7,14 @@ Homestead.json
 /public/vendor
 .env
 /.idea
-
-# Elastic Beanstalk Files
-.elasticbeanstalk/*
-!.elasticbeanstalk/*.cfg.yml
-!.elasticbeanstalk/*.global.yml
+
+/.ebextensions/00environmentVariables.config
+
+# Elastic Beanstalk Files
+
+.elasticbeanstalk/*
+
+!.elasticbeanstalk/*.cfg.yml
+
+!.elasticbeanstalk/*.global.yml
+
